<resources>
    <string name="app_name" translatable="false">Cognimobile</string>
    <string name="content_authority" translatable="false">ugr.gbv.cognimobile</string>
    <string name="title_activity_test" translatable="false">Test</string>
    <string name="undo_button">Undo</string>
    <string name="next_button">Next</string>
    <string name="leave_task">Do you want to continue to the next task?</string>
    <string name="leave">Leave</string>
    <string name="cancel">Cancel</string>
    <string name="alert">Alert</string>
    <string name="graph_instructions">Please draw a line, going from a number to a letter in ascending order. Begin from (1) and  then to A then to 2 and so on. The last one is E</string>
    <string name="cube_instructions">Copy this drawing as accurately as you can, in the space below</string>
    <string name="clock_instructions">Draw a clock. Put in all the numbers and set the time to %1$s.</string>
    <string name="clear_title_button">Clear</string>
    <string name="fluency_instructions">"Tell me as many words as you can think of that begin with %1$s. You can say any kind of word you want, except for proper nouns (like Bob or Boston), numbers, or words that begin with the same sound but have a different suffix, for example, love, lover, loving. I will tell you to stop after one minute "</string>
    <string name="backwards_instructions">Now I am going to say some more numbers, but when I am through you must repeat them to me in the backwards order.</string>
    <string name="memory_instructions">I am going to read a list of words that you will have to remember now and later on. Tell me as many words as you can remember. It doesn’t matter in what order you say them. I am going to read the same list for a second time. Try to remember and tell me as many words as you can, including words you said the first time. I will ask you to recall those words again at the end of the test.</string>
    <string name="memory_instructions_last">I am going to read the same list a second time. Try to remember and tell me as many words as you can, including the ones you mentioned the first time.</string>
    <string name="memory_instructions_2">I will ask you again at the end of this test which words you remember.</string>
    <string name="numbers_instructions">I am going to say some numbers and when I am through, type them to me exactly as I said them</string>
    <string name="letters_instructions">I am going to read a sequence of letters. Every time I say the letter %1$s, tap your hand once. If I say a different letter, do not tap.</string>
    <string name="substraction_instructions">Now, I will ask you to count by subtracting %1$d from %2$d, and then, keep subtracting %1$d from your answer until I tell you to stop</string>
    <string name="language_instructions">I am going to read you a sentence. Repeat it after me, exactly as I say it.</string>
    <string name="language_instructions_2">Now I am going to read you another sentence. Repeat this one, just as I said it.</string>
    <string name="abstraction_instruction">I am going to give you two words and I want you to introduce the similarity of them.</string>
    <string name="recall_instructions">I read some words to you earlier, which I asked you to remember. Tell me as many of those words as you can remember</string>
    <string name="orientation_instructions">I am going to ask you some question about the date and place you are now.</string>
    <string name="do_not_know">I do not know</string>
    <string name="animal_instructions">Can you tell me the name of this animal?</string>
    <string name="submit_answer">Submit</string>
    <string name="start_task">Start Task</string>
    <string name="test" translatable="false">test</string>
    <string name="provider_cognimobile" translatable="false">ugr.gbv.cognimobile.provider</string>
    <string name="help_button">Help</string>
    <string name="animalHint">Animal Name</string>
    <string name="sttLabel">Microphone</string>
    <string name="pref_first_time" translatable="false">pref_first_time</string>
    <string name="skip_button">Skip</string>
    <string name="proceed_button">Proceed</string>
    <string name="tutorial_message">This is your first time using the app, do you want to see the tutorial?</string>
    <string name="confirm">Confirm</string>
    <string name="tutorial_welcome_meessage">Welcome to the tutorial. \nYou are going to see how to use the tasks provided for you.</string>
    <string name="tutorial_top_message">The tasks have 3 areas: top (blue), center (red) and bottom (green). The top one contains useful information about what needs to be done.</string>
    <string name="tutorial_center_message">The center contains the playable area where you will be able to complete the task.</string>
    <string name="tutorial_bottom_message">The bottom contains buttons to undo certain actions, to provide more information about the task and to continue to the next task. If you do not know how to complete the task you can skip it with the next button, located on the right. To finish the tutorial click on the next button.</string>
    <string name="introduction_1_title">Results</string>
    <string name="introduction_2_title">Comfort</string>
    <string name="introduction_3_title">Security</string>
    <string name="introduction_1_message">Cognimobile allows you to get all the data needed for your studies plus context data from your patients in order you to diagnose better.</string>
    <string name="introduction_2_message">Your study patients have the possibility to do several tests on their own.</string>
    <string name="introduction_3_message">All the data collected from the studies will be secure on your server, thanks to the AWARE framework.</string>
    <string name="times_left">You have %1$d times to undo.</string>
    <string name="no_times_left">You have not any undo times left.</string>
    <string name="speech_bubble_tail">Speech bubble tail</string>
    <string name="menu_studies">Studies</string>
    <string name="menu_tests" translatable="false">Tests</string>
    <string name="menu_settings">Settings</string>
    <string name="attention">Attention</string>
    <string name="go_on">Go</string>
    <string name="confirmation">Confirmation</string>
    <string name="continue_next_task">Continue</string>
    <string name="task_is_ended">Task is ended. Press Next to continue.</string>
    <string name="save">Save</string>
    <string name="add_word">Add word</string>
    <string name="quit_study_contentDescription">Quit study</string>
    <string name="join_study_label">Join New Study</string>
    <string name="toast_joining_study">Joining to the study</string>
    <string name="toast_could_not_join_study">Could not get the study link</string>
    <string name="provide_link">Please provide a link</string>
    <string name="write_test_link_explanation">Provide the study link in the space below.</string>
    <string name="link_hint">Study Link</string>
    <string name="enter_link">Enter link</string>
    <string name="no_studies_active">There is not any study active at the moment. Please click the button bellow and add one</string>
    <string name="quit_test_contentDescription">Delete test</string>
    <string name="tests_available">There are %1$d new tests available.</string>
    <string name="cognimobile_channel" translatable="false">cognimobile_channel</string>
    <string name="accept_notification">Okay</string>
    <string name="no_studies_content_description">No Studies Image</string>
    <string name="no_tests_content_description">No Tests Image</string>
    <string name="no_tests_actives">There are not any tests available at the moment.</string>
    <string name="error_occurred">An error occurred</string>
    <string name="pref_config" translatable="false">pref_config</string>
    <string name="pref_notifications" translatable="false">pref_notifications</string>
    <string name="pref_about" translatable="false">pref_about</string>
    <string name="pref_config_value" translatable="false">pref_config_value</string>
    <string name="notification_click" translatable="false">notification_click</string>
    <string name="pref_notifications_title">Enable message notifications</string>
    <string name="pref_config_title">Change inputs options</string>
    <string name="pref_about_title">About</string>
    <string name="cognimobile_description">Cognimobile is a part of Cognimobile Platform, an End-Of-Degree project developed by Guillermo Bueno Vargas at the University of Granada. The aim of this project is to ease the compilation of contextual information from patients and make possible to administer cognitive test digitally.</string>
    <string name="pref_joined_study" translatable="false">pref_joined_study</string>
    <string name="test_completed">You have completed the test. Well done!</string>
    <string name="thirdPartyElements">"This project would never been possible without the following elements:    Copyright 2013 AWARE framework  Licensed under the Apache License, Version 2.0 (the “License”); you may not use this file except in compliance with the License. You may obtain a copy of the License at  http://www.apache.org/licenses/LICENSE-2.0  Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an “AS IS” BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.    Copyright 2020 Lottie  Licensed under the Apache License, Version 2.0 (the “License”); you may not use this file except in compliance with the License. You may obtain a copy of the License at  http://www.apache.org/licenses/LICENSE-2.0  Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an “AS IS” BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.    Android About Page  The MIT License (MIT) Copyright © 2016 Mehdi Sakout  Permission is hereby granted, free of charge, to any person obtaining a copy of this software  and associated documentation files (the \"Software\"), to deal in the Software without restriction,  including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense,  and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:  The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.  THE SOFTWARE IS PROVIDED \"AS IS\", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED,  INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,  FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT.  IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY,  WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE  OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.    WordPress for Android, taken as inspiration for buttons.  is an Open Source project covered by the GNU General Public License version 2.  Note: code in the libs/ directory comes from external libraries, which might be covered by a different license compatible with the GPLv2.    Animations authors from LottieFiles.com:   - Shivsagar   - Jonas Alvarson   - pratyush das      "</string>
    <string name="click_back">Please click BACK again to exit</string>
    <string name="click_done">CLICK!</string>
    <string name="provide_data">PROVIDE DATA</string>
    <string name="loading">Loading …</string>
    <string name="device_id" translatable="false">Device id: \n</string>
    <string name="pref_server_url">pref_server_url</string>
</resources>